# xy_systemd

./: .xy-codehub-ci.yml  MANIFEST.in  README.md  pyproject.toml  setup.py
readme/: README.en.md  README.zh-hant.md
xy_systemd/: BaseModuleData.py  ModuleData.py  Resource.py  Runner.py  utils.py
xy_systemd/execute/: Main.py
